--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,16 +13,19 @@
         android:theme="@style/Theme.UsiApp"
         tools:targetApi="31">
         <activity
-            android:name=".IndustryActivity"
+            android:name=".view.AcademicianLoginActivity"
             android:exported="false" />
         <activity
-            android:name=".AcademicianActivity"
+            android:name=".view.IndustryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.AcademicianActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
