--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.UsiApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.PersonalInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.AcademicianLoginActivity"
             android:exported="false" />
         <activity
