--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.UsiApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.FirmInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.AcademicInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.ContactInfoActivity"
             android:exported="false" />
         <activity
