--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.UsiApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.PreviousEducationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.EducationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.PreviousConsultanciesActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.ConsultancyFieldsActivity"
             android:exported="false" />
         <activity
