--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- Sadece kamerası olan cihazlarda görünür -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UsiApp"
         tools:targetApi="31">
+        <activity
+            android:name=".view.SignUpActivity"
+            android:exported="false" />
         <activity
             android:name=".view.PreviousEducationActivity"
             android:exported="false" />
@@ -47,9 +57,6 @@
             android:exported="false" />
         <activity
             android:name=".view.AcademicianActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".view.MainActivity"
