--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,25 +20,29 @@
         android:theme="@style/Theme.UsiApp"
         tools:targetApi="31">
         <activity
-            android:name=".view.PreviewActivity"
+            android:name=".view.view.SignUpIndustryActivity"
             android:exported="false" />
         <activity
-            android:name=".view.VerificationActivity"
+            android:name=".view.view.PreviewActivity"
             android:exported="false" />
         <activity
-            android:name=".view.SignUpActivity"
+            android:name=".view.view.VerificationActivity"
             android:exported="false" />
         <activity
-            android:name=".view.AcademicianLoginActivity"
+            android:name=".view.view.SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".view.IndustryActivity"
+            android:name=".view.view.AcademicianLoginActivity"
             android:exported="false" />
         <activity
-            android:name=".view.AcademicianActivity"
+            android:name=".view.view.IndustryActivity"
             android:exported="false" />
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.view.AcademicianActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".view.view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
